# augusto

./: ASCII_ART_COMPLETE.md  ASCII_ART_FEATURE.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  LUXO_LIXO_TRIBUTE.md  ORGANIZATION_REPORT.md  ORGANIZATION_SUMMARY.md  PROJECT_PLAN.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/chatmodes/: Thinking-Beast-Mode.chatmode.md  rust-gpt-4.1-beast-mode.chatmode.md
.github/scripts/: fix-line-endings.sh
.github/workflows/: rust.yml
augusto/: Cargo.toml
augusto/src/: anagram.rs  ascii_art.rs  benchmark.rs  main.rs  wordsmith.rs
